--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </section>
         <!-- Featured Products ends -->
 
-        <!-- Leatest Products starts -->
+        <!-- Largest Products starts -->
         <section class="container-fluid largest-products">
             <h3>Largest Products</h3>
             <div class="announcement d-flex justify-content-center">
@@ -299,7 +299,7 @@
                 </div>
             </div>
         </section>
-        <!-- Leatest Products ends -->
+        <!-- Largest Products ends -->
 
     </main>
     <!-- main ends -->
