--- a/index.html
+++ b/index.html
@@ -301,6 +301,68 @@
         </section>
         <!-- Largest Products ends -->
 
+        <!-- Shopex offer starts -->
+        <section class="container-fluid shopex-offer">
+            <h3>What Shopex Offer!</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <div class="col text-center p-3">
+                    <div class="shopex-container">
+                        <div class="shopex-image">
+                            <img src="images/truc.png" alt="">
+                        </div>
+                        <div class="shopex-details">
+                            <h4>24/7 Support</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+                                gravida.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center p-3">
+                    <div class="shopex-container">
+                        <div class="shopex-image">
+                            <img src="images/money-holding.jpg" alt="">
+                        </div>
+                        <div class="shopex-details">
+                            <h4>24/7 Support</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+                                gravida.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center p-3">
+                    <div class="shopex-container">
+                        <div class="shopex-image">
+                            <img src="images/badge.jpg" alt="">
+                        </div>
+                        <div class="shopex-details">
+                            <h4>24/7 Support</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+                                gravida.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col text-center p-3">
+                    <div class="shopex-container">
+                        <div class="shopex-image">
+                            <img src="images/logo24.png" alt="">
+                        </div>
+                        <div class="shopex-details">
+                            <h4>24/7 Support</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
+                                gravida.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Shopex offer ends -->
+
+        <!-- Banner Two starts -->
+        <section class="container-fluid banner-two">
+
+        </section>
+        <!-- Banner Two ends -->
+
     </main>
     <!-- main ends -->
     <footer>
