--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
         <!-- banner starts -->
         <section class="container-fluid banner">
             <div class="row">
-                <div class="col col-sm-12 col-md-12 col-lg-2 banner-light">
+                <div class="col col-12 col-md-12 col-lg-2 banner-light">
                     <img src="images/light.png" alt="">
                 </div>
-                <div class="col col-sm-12 col-md-12 col-lg-5 banner-details ps-4">
+                <div class="col col-12 col-md-12 col-lg-5 banner-details ps-4">
                     <small class="banner-title">Best Furniture For Your Castle....</small>
                     <h2>New Furniture Collection Trends in 2020</h2>
                     <p class="title-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna in est
@@ -113,18 +113,18 @@
                         justo.</p>
                     <button class="banner-button">Shop Now</button>
                 </div>
-                <div class="col col-sm-12 col-md-12 col-lg-5 banner-image">
+                <div class="col col-12 col-md-12 col-lg-5 banner-image">
                     <div class="image1">
-                        <img src="images/Ellipse 60.png" alt="">
+                        <img class="img-fluid" src="images/Ellipse 60.png" alt="">
                     </div>
                     <div class="image2">
-                        <img src="images/Ellipse 61.png" alt="">
+                        <img class="img-fluid" src="images/Ellipse 61.png" alt="">
                     </div>
                     <div class="image3">
-                        <img src="images/chair-big1.png" alt="">
+                        <img class="img-fluid" src="images/chair-big1.png" alt="">
                     </div>
                     <div class="image4">
-                        <img src="images/Vector.png" alt="">
+                        <img class="img-fluid" src="images/Vector.png" alt="">
                         <p>50% off</p>
                     </div>
                 </div>
@@ -359,9 +359,51 @@
 
         <!-- Banner Two starts -->
         <section class="container-fluid banner-two">
-
+            <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2">
+                <div class="col">
+                    <div class="banner-two-image">
+                        <div class="image-one">
+                            <img class="img-fluid" src="images/Ellipse 63.png" alt="">
+                        </div>
+                        <div class="image-two">
+                            <img class="img-fluid" src="images/chair-big2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="banner-two-details">
+                        <h3>Unique Features Of leatest & Trending Poducts</h3>
+                        <p> <img class="me-2" src="images/Ellipse 65.png" alt=""> All frames constructed with hardwood
+                            solids and
+                            laminates
+                        </p>
+                        <p><img class="me-2" src="images/Ellipse 66.png" alt=""> Reinforced with double wood dowels,
+                            glue,
+                            screw-nails</p>
+                        <p><img class="me-2" src="images/Ellipse 67.png" alt=""> Arms, backs and seats are
+                            structurally
+                            reinforced double.
+                        </p>
+                        <div class="d-flex align-items-center">
+                            <div>
+                                <button class="banner-button">Add To Cart</button>
+                            </div>
+                            <div class="italian-sofa">
+                                <p class="mt-4">B&B Italian Sofa</p>
+                                <p class="mb-3">$32.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Banner Two ends -->
+
+        <!-- Trending Products starts -->
+        <section class="container-fluid trending-products">
+
+        </section>
+        <!-- Trending Products ends -->
 
     </main>
     <!-- main ends -->
