--- a/index.html
+++ b/index.html
@@ -401,9 +401,145 @@
 
         <!-- Trending Products starts -->
         <section class="container-fluid trending-products">
-
+            <h3>Trending Products</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <div class="col mb-4">
+                    <div class="card text-center treding-card">
+                        <div class="trending-image">
+                            <img src="images/chair11.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h5 class="card-title trending-title">Cantilever chair</h5>
+                            <div class="trending-price d-flex">
+                                <h4 class="">$26.00 </h4>
+                                <p class="">$42.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card text-center treding-card">
+                        <div class="trending-image">
+                            <img src="images/chair12.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h5 class="card-title trending-title">Cantilever chair</h5>
+                            <div class="trending-price d-flex">
+                                <h4 class="">$26.00 </h4>
+                                <p class="">$42.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card text-center treding-card">
+                        <div class="trending-image">
+                            <img src="images/chair13.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h5 class="card-title trending-title">Cantilever chair</h5>
+                            <div class="trending-price d-flex">
+                                <h4 class="">$26.00 </h4>
+                                <p class="">$42.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card text-center treding-card">
+                        <div class="trending-image">
+                            <img src="images/chair14.png" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h5 class="card-title trending-title">Cantilever chair</h5>
+                            <div class="trending-price d-flex">
+                                <h4 class="">$26.00 </h4>
+                                <p class="">$42.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2 row-cols-1 row-cols-md-1 row-cols-lg-3">
+                <div class="col mb-4">
+                    <div class="clock-box">
+                        <div class="clock-details">
+                            <h4>23% off in all products</h4>
+                            <p class="">Shop Now</p>
+                        </div>
+                        <div class="clock-image">
+                            <img class="img-fluid" src="images/clock.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="shelve-box">
+                        <div class="shelve-details">
+                            <h4>23% off in all products</h4>
+                            <p class="">View Collection</p>
+                        </div>
+                        <div class="shelve-image">
+                            <img class="img-fluid" src="images/shelve.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4 pt-2">
+                    <div class="row mb-3">
+                        <div class="col-5">
+                            <div class="executive-chair">
+                                <img src="images/small-chair1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <div class="executive-details mt-3">
+                                <h5>Executive Seat chair</h5>
+                                <p>$32.00</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-5">
+                            <div class="executive-chair">
+                                <img src="images/small-chair2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <div class="executive-details mt-3">
+                                <h5>Executive Seat chair</h5>
+                                <p>$32.00</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="executive-chair">
+                                <img src="images/small-chair3.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-7">
+                            <div class="executive-details mt-3">
+                                <h5>Executive Seat chair</h5>
+                                <p>$32.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Trending Products ends -->
+
+        <!-- Contact section starts -->
+        <section class="container-fluid contact">
+            <div class="row">
+                <div class="col">
+
+                </div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </section>
+        <!-- Contact section ends -->
 
     </main>
     <!-- main ends -->
