--- a/index.html
+++ b/index.html
@@ -528,18 +528,50 @@
         </section>
         <!-- Trending Products ends -->
 
-        <!-- Contact section starts -->
+        <!-- Contact & about starts -->
         <section class="container-fluid contact">
-            <div class="row">
-                <div class="col">
-
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <div class="col-lg-4 mb-4">
+                    <div class="contact-info">
+                        <h3 class="mb-3">Hekto</h3>
+                        <p><input type="text" placeholder="Enter Email Address"> <button>Sign Up</button>
+                        </p>
+                        <p>Contact Info</p>
+                        <p>17 Princess Road, London, Greater London NW1 8JR, UK</p>
+                    </div>
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col-lg-3 mb-4">
+                    <div class="catagories">
+                        <h4>Catagories</h4>
+                        <p>Laptops & Computers</p>
+                        <p>Cameras & Photography</p>
+                        <p>Smart Phones & Tablets</p>
+                        <p>Video Games & Consoles</p>
+                        <p>Waterproof Headphones</p>
+                    </div>
+                </div>
+                <div class="col-lg-2 mb-4">
+                    <div class="catagories">
+                        <h4>Customer Care</h4>
+                        <p>My Account</p>
+                        <p>Discount</p>
+                        <p>Returns</p>
+                        <p>Orders History</p>
+                        <p>Order Tracking</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-4">
+                    <div class="catagories">
+                        <h4>Pages</h4>
+                        <p>Blog</p>
+                        <p>Category</p>
+                        <p>Visual Composer Elements</p>
+                        <p>WooCommerce Pages</p>
+                    </div>
+                </div>
             </div>
         </section>
-        <!-- Contact section ends -->
+        <!-- Contact & about ends -->
 
     </main>
     <!-- main ends -->
