--- a/index.html
+++ b/index.html
@@ -575,9 +575,26 @@
 
     </main>
     <!-- main ends -->
-    <footer>
 
+    <!-- Footer starts -->
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 text-center text-lg-starts">
+                <div>
+                    <p>©Webecy - All Rights Reserved</p>
+                </div>
+            </div>
+            <div class="col-lg-6 text-center text-lg-starts">
+                <div>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
     </footer>
+    <!-- Footer ends -->
+
     <!-- Bootstrap js link -->
     <script src="JS/bootstrap.bundle.min.js"></script>
 </body>
